updated ObjectBrowser naming